Fix truncated table cells

--- a/themes/default/assets/src/sass/common/general/generic.sass
+++ b/themes/default/assets/src/sass/common/general/generic.sass
@@ -90,6 +90,8 @@ ul.controls li
     th
         &.is-truncated
             position: relative
+            width: 30ch
+            min-width: 20ch
             & > span
                 display: block
                 position: absolute
@@ -103,3 +105,5 @@ ul.controls li
                 white-space: nowrap
         &.is-nowrap
             white-space: nowrap
+        &.is-sticky
+            z-index: 1
